Avoid invisible text during font loading

--- a/css/main.sass
+++ b/css/main.sass
@@ -27,6 +27,7 @@ main
 
 body
   font-family: $font-sans
+  font-display: swap
   margin: 0
   padding: 0
   text-rendering: optimizeLegibility
